--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "swiper": "^11.1.5",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
