--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,22 @@
     {
       "path": "./tsconfig.node.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "src/*": [
+        "./src/*"
+      ],
+      "components/*": [
+        "./src/components/*"
+      ],
+      "assets": [
+        "./src/assets/*"
+      ],
+      "lib": [
+        "./src/lib/*"
+      ],
+    }
+  }
 }
